--- a/index.html
+++ b/index.html
@@ -19,25 +19,22 @@
         <i class="box box-menu" id="menu-icon"></i>
         <!-- Navbar -->
         <nav>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
+            <a href="#home">Acceuil</a>
+            <a href="#about">À Propos</a>
             <a href="#services">Services</a>
-            <a href="#projects">Projects</a>
+            <a href="#projects">Projets</a>
             <a href="contacts">Contacts</a>
         </nav>
         <!-- Contact me button -->
-        <button class="gradient-btn">Contact Me</button>
+        <button class="gradient-btn">Contactez-Moi</button>
      </header>
      <!-- Home section -->
      <section class="home" id="home">
         <div class="home-content">
             <h1>
-                Hi It's <span>Michael</span>
+                Salut, c'est <span>Michael</span>
             </h1>
-            <h2>
-                I'm a <span>Front-End Web Developper</span>
-            </h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe expedita placeat ad exercitationem repudiandae possimus ut, est assumenda eveniet debitis tempore deleniti similique officiis pariatur. Quae veritatis qui esse temporibus.</p>
+            <p>Je m’appelle Michael Brown, j’ai 20 ans et je me consacre à devenir développeur full-stack. Passionné par le web et motivé par l’envie d’apprendre, j’ai déjà suivi deux formations intensives, toutes deux réussies avec succès.</p>
             <div class="social-icons">
                 <a href="#">
                     <i class="bx bxl-github"></i>
@@ -53,7 +50,7 @@
                 </a>
             </div>
             <div class="btn-group">
-                   <a href="#" class="btn">Hire</a>
+                   <a href="#" class="btn">Recruter</a>
                    <a href="#contact">Contact</a> 
             </div>
         </div>
