--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header -->
      <header>
         <a href="#home" class="logo">
-            Michael <span>BROWN</span>
+            <img src="Assets/ChatGPT Image 21 nov. 2025, 23_26_15.png" alt="">
         </a>
         <i class="box box-menu" id="menu-icon"></i>
         <!-- Navbar -->
