--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header -->
      <header>
         <a href="#home" class="logo">
-            <img src="Assets/ChatGPT Image 21 nov. 2025, 23_26_15.png" alt="">
+            <img src="Assets/M_logo.png" alt="A purple M logo">
         </a>
         <i class="box box-menu" id="menu-icon"></i>
         <!-- Navbar -->
@@ -34,7 +34,7 @@
             <h1>
                 Salut, c'est <span>Michael</span>
             </h1>
-            <p>Je m’appelle Michael Brown, j’ai 20 ans et je me consacre à devenir développeur full-stack. Passionné par le web et motivé par l’envie d’apprendre, j’ai déjà suivi deux formations intensives, toutes deux réussies avec succès.</p>
+            <p>Je m’appelle Michael Brown, j’ai 20 ans et je me consacre à devenir développeur full-stack. Bienvenu à mon site web :)</p>
             <div class="social-icons">
                 <a href="#">
                     <i class="bx bxl-github"></i>
@@ -55,8 +55,21 @@
             </div>
         </div>
         <div class="home-img">
-            <img src="Assets/44802120-04C5-4C31-97A7-849F9B2B9447.jpg" alt="An image of a me looking up while rain is pouring">
+            <img src="Assets/Portrait.jpg" alt="An image of a young man blowing smoke in a room with purple LED">
         </div>
      </section>
+     <!-- Section About -->
+      <section class="about" id="about">
+        <div class="about-img">
+            <img src="Assets/Potrait_2.PNG" alt="">
+        </div>
+        <div class="about-content">
+            <h2>À propos <br>  <span>de Moi</span></h2>
+            <p>Je m’appelle Michael Brown, j’ai 20 ans et je me consacre à devenir développeur full-stack. Passionné par le web et motivé par l’envie d’apprendre, j’ai déjà suivi deux formations intensives, toutes deux réussies avec succès.
+
+Trilingue en anglais, français et hongrois, je suis à l’aise dans des environnements variés et internationaux. Curieux, rigoureux et toujours prêt à relever de nouveaux défis, je souhaite mettre mes compétences au service de projets modernes et innovants.</p>
+                <a href="#" class="btn">En savoir plus</a>
+        </div>
+      </section>
 </body>
 </html>
