--- a/index.html
+++ b/index.html
@@ -71,5 +71,40 @@ Trilingue en anglais, français et hongrois, je suis à l’aise dans des enviro
                 <a href="#" class="btn">En savoir plus</a>
         </div>
       </section>
+      <!-- Services Section -->
+       <section class="services">
+            <h2 class="heading">Services</h2>
+            <div class="stubborn">
+                <div class="services-container">
+                    <div class="service-box">
+                           <div class="service-info">
+                                <i class="bx bxl-figma"></i>
+                                <h3>UI / UX Design</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, nam facilis tenetur ipsam saepe voluptas! Hic veniam, aut eligendi, odit optio labore facilis perspiciatis aperiam, corrupti dolores harum ullam odio?</p>
+                           </div> 
+                     </div>
+                </div>
+
+                <div class="services-container">
+                    <div class="service-box">
+                            <div class="service-info">
+                                <i class="bx bx-code"></i>
+                                <h3>Front-End</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, nam facilis tenetur ipsam saepe voluptas! Hic veniam, aut eligendi, odit optio labore facilis perspiciatis aperiam, corrupti dolores harum ullam odio?</p>
+                           </div> 
+                    </div>
+                </div>
+
+                <div class="services-container">
+                    <div class="service-box">
+                           <div class="service-info">
+                                <i class="bx bx-brain"></i>
+                                <h3>Conception</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, nam facilis tenetur ipsam saepe voluptas! Hic veniam, aut eligendi, odit optio labore facilis perspiciatis aperiam, corrupti dolores harum ullam odio?</p>
+                           </div> 
+                    </div>
+                </div>
+            </div>
+       </section>
 </body>
 </html>
