--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Trilingue en anglais, français et hongrois, je suis à l’aise dans des enviro
         </div>
       </section>
       <!-- Services Section -->
-       <section class="services">
+       <section class="services" id="services">
             <h2 class="heading">Services</h2>
             <div class="stubborn">
                 <div class="services-container">
