--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
             </h1>
             <p>Je m’appelle Michael Brown, j’ai 20 ans et je me consacre à devenir développeur full-stack. Bienvenu à mon site web :)</p>
             <div class="social-icons">
-                <a href="#">
+                <a href="https://github.com/Brown-in-Michael" target="_blank">
                     <i class="bx bxl-github"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/in/michael-brown-891811386/" target="_blank">
                     <i class="bx bxl-linkedin-square"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/_michael.edit/" target="_blank">
                     <i class="bx bxl-instagram-alt"></i>
                 </a>
-                <a href="#">
-                    <i class="bx bxl-twitter"></i>
+                <a href="https://www.tiktok.com/en/" target="_blank">
+                    <i class="bx bxl-tiktok"></i>
                 </a>
             </div>
             <div class="btn-group">
