--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#about">À Propos</a>
             <a href="#services">Services</a>
             <a href="#projects">Projets</a>
-            <a href="contacts">Contacts</a>
+            <a href="#Contact">Contacts</a>
         </nav>
         <!-- Contact me button -->
         <button class="gradient-btn">Contactez-Moi</button>
@@ -61,7 +61,7 @@
      <!-- Section About -->
       <section class="about" id="about">
         <div class="about-img">
-            <img src="Assets/Potrait_2.PNG" alt="">
+            <img src="Assets/Portrait_2.PNG" alt="">
         </div>
         <div class="about-content">
             <h2>À propos <br>  <span>de Moi</span></h2>
@@ -106,5 +106,121 @@ Trilingue en anglais, français et hongrois, je suis à l’aise dans des enviro
                 </div>
             </div>
        </section>
+       <!-- Project Section -->
+        <section class="projects" id="projects">
+            <h2>Projets</h2>
+            <div class="project-box">
+                <div class="project-card">
+                    <img src="Assets/Project_1.png" alt="A web site of a festival">
+                    <h3>Projet 1</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
+                    <div class="btn">
+                        Revoir les projets
+                    </div>
+                </div>
+
+                 <div class="project-card">
+                    <img src="Assets/Project_2.png" alt="A web site of a festival">
+                    <h3>Projet 2</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
+                    <div class="btn">
+                        Revoir les projets
+                    </div>
+                </div>
+
+                 <div class="project-card">
+                    <img src="Assets/Project_3.png" alt="A web site of a festival">
+                    <h3>Projet 3</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
+                    <div class="btn">
+                        Revoir les projets
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="Assets/Project_rplc.png" alt="A web site of a festival">
+                    <h3>Projet 4</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
+                    <div class="btn">
+                        Revoir les projets
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="Assets/Project_5.png" alt="A web site of a festival">
+                    <h3>Projet 5</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
+                    <div class="btn">
+                        Revoir les projets
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="Assets/Project_6.png" alt="A web site of a festival">
+                    <h3>Projet 6</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
+                    <div class="btn">
+                        Revoir les projets
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Contact Form -->
+        <section class="Contact" id="Contact">
+            <h2>Contactez-<span>Moi</span></h2>
+
+            <form action="#">
+                <div class="input-group">
+                    <div class="input-box">
+                        <input type="text" placeholder="Full Namer">
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <div class="input-box">
+                        <input type="number" placeholder="Phone Number">
+                        <input type="text" placeholder="Subject">
+                    </div>
+                </div>
+                <div class="input-group-2">
+                    <textarea name="" id="" placeholder="Message" cols="30" rows="10"></textarea>
+                    <input type="submit" value="Envoyer" class="btn">
+                </div>
+            </form>
+        </section>
+        <!-- Footer -->
+         <footer>
+             <div class="social-icons">
+                <a href="https://github.com/Brown-in-Michael" target="_blank">
+                    <i class="bx bxl-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/michael-brown-891811386/" target="_blank">
+                    <i class="bx bxl-linkedin-square"></i>
+                </a>
+                <a href="https://www.instagram.com/_michael.edit/" target="_blank">
+                    <i class="bx bxl-instagram-alt"></i>
+                </a>
+                <a href="https://www.tiktok.com/en/" target="_blank">
+                    <i class="bx bxl-tiktok"></i>
+                </a>
+            </div>
+            <ul class="list">
+                <li>
+                    <a href="">FAQ</a>
+                </li>
+                <li>
+                    <a href="#services">Services</a>
+                </li>
+                <li>
+                    <a href="#about">À propos</a>
+                </li>
+                <li>
+                    <a href="#projects">Projets</a>
+                </li>
+
+                <li>
+                    <a href="#Contact">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+
+            <p class="copyright">@ Michael Brown | All Rights Reserved</p>
+         </footer>
 </body>
 </html>
