--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <nav>
             <a href="#home">Acceuil</a>
             <a href="#about">À Propos</a>
-            <a href="#services">Services</a>
+            <a href="#services">Skills</a>
             <a href="#projects">Projets</a>
-            <a href="#Contact">Contacts</a>
+            <a href="#Contact">Contact</a>
         </nav>
         <!-- Contact me button -->
         <button class="gradient-btn">Contactez-Moi</button>
@@ -49,10 +49,10 @@
                     <i class="bx bxl-tiktok"></i>
                 </a>
             </div>
-            <div class="btn-group">
+            <!-- <div class="btn-group">
                    <a href="#" class="btn">Recruter</a>
                    <a href="#contact">Contact</a> 
-            </div>
+            </div> -->
         </div>
         <div class="home-img">
             <img src="Assets/Portrait.jpg" alt="An image of a young man blowing smoke in a room with purple LED">
@@ -68,19 +68,19 @@
             <p>Je m’appelle Michael Brown, j’ai 20 ans et je me consacre à devenir développeur full-stack. Passionné par le web et motivé par l’envie d’apprendre, j’ai déjà suivi deux formations intensives, toutes deux réussies avec succès.
 
 Trilingue en anglais, français et hongrois, je suis à l’aise dans des environnements variés et internationaux. Curieux, rigoureux et toujours prêt à relever de nouveaux défis, je souhaite mettre mes compétences au service de projets modernes et innovants.</p>
-                <a href="#" class="btn">En savoir plus</a>
+                <!-- <a href="#" class="btn">En savoir plus</a> -->
         </div>
       </section>
       <!-- Services Section -->
        <section class="services" id="services">
-            <h2 class="heading">Services</h2>
+            <h2 class="heading">Compétences</h2>
             <div class="stubborn">
                 <div class="services-container">
                     <div class="service-box">
                            <div class="service-info">
                                 <i class="bx bxl-figma"></i>
                                 <h3>UI / UX Design</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, nam facilis tenetur ipsam saepe voluptas! Hic veniam, aut eligendi, odit optio labore facilis perspiciatis aperiam, corrupti dolores harum ullam odio?</p>
+                                <p>Grâce à Figma, je crée des wireframes et des prototypes d’applications. Pour le choix des couleurs et l’accessibilité, j’utilise Coolors et j’intègre également l’IA afin de concevoir une interface utilisateur intuitive.</p>
                            </div> 
                      </div>
                 </div>
@@ -90,7 +90,7 @@ Trilingue en anglais, français et hongrois, je suis à l’aise dans des enviro
                             <div class="service-info">
                                 <i class="bx bx-code"></i>
                                 <h3>Front-End</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, nam facilis tenetur ipsam saepe voluptas! Hic veniam, aut eligendi, odit optio labore facilis perspiciatis aperiam, corrupti dolores harum ullam odio?</p>
+                                <p>Je possède de solides bases en HTML et CSS. Mes connaissances en JavaScript sont correctes, sans être parfaites, mais je m'efforce d'en apprendre davantage et de m'améliorer.</p>
                            </div> 
                     </div>
                 </div>
@@ -100,7 +100,7 @@ Trilingue en anglais, français et hongrois, je suis à l’aise dans des enviro
                            <div class="service-info">
                                 <i class="bx bx-brain"></i>
                                 <h3>Conception</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, nam facilis tenetur ipsam saepe voluptas! Hic veniam, aut eligendi, odit optio labore facilis perspiciatis aperiam, corrupti dolores harum ullam odio?</p>
+                                <p>Je travaille très bien en équipe. Je contribue à l'équipe grâce à mes qualités personnelles et aux compétences que j'ai acquises. J'aime résoudre les problèmes, ce qui est essentiel en développement web.</p>
                            </div> 
                     </div>
                 </div>
@@ -112,44 +112,44 @@ Trilingue en anglais, français et hongrois, je suis à l’aise dans des enviro
             <div class="project-box">
                 <div class="project-card">
                     <img src="Assets/Project_1.png" alt="A web site of a festival">
-                    <h3>Projet 1</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
-                    <div class="btn">
-                        Revoir les projets
-                    </div>
+                    <h3>HTML & CSS</h3>
+                    <p>Voici donc un projet que j'ai dû réaliser seul après avoir appris les bases du HTML et du CSS en six jours. Ce projet ne contient pas de JavaScript. Ma classe et moi avons reçu un wireframe que je devais reproduire. Le projet porte sur un festival de rap à venir.</p>
+                    <a href="https://brown-in-michael.github.io/renduCSS/" target="_blank"><div class="btn">
+                        Voir le projet
+                    </div></a>
                 </div>
 
                  <div class="project-card">
-                    <img src="Assets/Project_2.png" alt="A web site of a festival">
-                    <h3>Projet 2</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
-                    <div class="btn">
-                        Revoir les projets
-                    </div>
+                    <img src="Assets/Capture d’écran 2025-12-24 005455.png" alt="A web site of a festival">
+                    <h3>JavaScript (API)</h3>
+                    <p>Il s'agit de mon tout premier projet où j'ai utilisé mes connaissances en JavaScript pour récupérer l'API de Deezer et l'intégrer à mon site. Le but du projet est de permettre la recherche d'un artiste ou d'une chanson, et d'écouter le morceau recherché, comme sur Deezer.</p>
+                    <a href="https://brown-in-michael.github.io/deezerAPI/" target="_blank"><div class="btn">
+                        Voir le projet
+                    </div></a>
                 </div>
 
                  <div class="project-card">
-                    <img src="Assets/Project_3.png" alt="A web site of a festival">
-                    <h3>Projet 3</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
-                    <div class="btn">
-                        Revoir les projets
-                    </div>
+                    <img src="Assets/Capture d’écran 2025-12-24 011906.png" alt="A web site of a festival">
+                    <h3>Application Prototype</h3>
+                    <p>Ce projet avait pour objectif de me familiariser avec Figma. J’ai conçu un prototype d’application visant à aider les animaux sauvages blessés, en recueillant les retours d’autres étudiants pour l’améliorer. J’ai ensuite testé le prototype afin de vérifier son utilisation intuitive, sans tutoriel.</p>
+                    <a href="https://www.figma.com/proto/jp63HTUomFt2LLN9Gwubyz/WILD-AID?node-id=129-1072&starting-point-node-id=129%3A1072" target="_blank"><div class="btn">
+                        Voir le projet
+                    </div></a>
                 </div>
                 <div class="project-card">
-                    <img src="Assets/Project_rplc.png" alt="A web site of a festival">
-                    <h3>Projet 4</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
+                    <img src="Assets/Capture d’écran 2025-12-24 014032.png" alt="A web site of a festival">
+                    <h3>JavaScript (fichier JSON)</h3>
+                    <p>Bien qu'inachevé, ce projet consiste à utiliser JavaScript pour créer la plupart des éléments HTML et à utiliser un fichier JSON pour compléter des informations telles que le nom de l'entreprise, son slogan, ses services, etc. Pluiseur thèmes étaient proposés. J'ai choisi le thème « Escape Game ».</p>
                     <div class="btn">
-                        Revoir les projets
+                        Voir le projet
                     </div>
                 </div>
-                <div class="project-card">
+                <!-- <div class="project-card">
                     <img src="Assets/Project_5.png" alt="A web site of a festival">
                     <h3>Projet 5</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
                     <div class="btn">
-                        Revoir les projets
+                        Voir le projet
                     </div>
                 </div>
                 <div class="project-card">
@@ -157,9 +157,9 @@ Trilingue en anglais, français et hongrois, je suis à l’aise dans des enviro
                     <h3>Projet 6</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
                     <div class="btn">
-                        Revoir les projets
+                        Voir le projet
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- Contact Form -->
@@ -169,12 +169,12 @@ Trilingue en anglais, français et hongrois, je suis à l’aise dans des enviro
             <form action="#">
                 <div class="input-group">
                     <div class="input-box">
-                        <input type="text" placeholder="Full Namer">
+                        <input type="text" placeholder="Nom Prénom">
                         <input type="email" placeholder="Email">
                     </div>
                     <div class="input-box">
-                        <input type="number" placeholder="Phone Number">
-                        <input type="text" placeholder="Subject">
+                        <input type="number" placeholder="Téléphone">
+                        <input type="text" placeholder="Sujet">
                     </div>
                 </div>
                 <div class="input-group-2">
@@ -204,7 +204,7 @@ Trilingue en anglais, français et hongrois, je suis à l’aise dans des enviro
                     <a href="">FAQ</a>
                 </li>
                 <li>
-                    <a href="#services">Services</a>
+                    <a href="#services">Skills</a>
                 </li>
                 <li>
                     <a href="#about">À propos</a>
