--- a/index.html
+++ b/index.html
@@ -222,5 +222,6 @@ Trilingue en anglais, français et hongrois, je suis à l’aise dans des enviro
 
             <p class="copyright">@ Michael Brown | All Rights Reserved</p>
          </footer>
+         <script src="script.js"></script>
 </body>
 </html>
