--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <!-- Header -->
-     <header>
-        <a href="#home" class="logo">
-            <img src="Assets/M_logo.png" alt="A purple M logo">
-        </a>
-        <i class="box box-menu" id="menu-icon"></i>
+    <header>
+        <!-- <i class="box box-menu" id="menu-icon"></i> -->
         <!-- Navbar -->
         <nav>
             <a href="#home">Acceuil</a>
@@ -26,16 +27,18 @@
             <a href="#Contact">Contact</a>
         </nav>
         <!-- Contact me button -->
-        <button class="gradient-btn">Contactez-Moi</button>
-     </header>
-     <!-- Home section -->
-     <section class="home" id="home">
+        <!-- <button class="gradient-btn">Contactez-Moi</button> -->
+    </header>
+    <!-- Home section -->
+    <section class="home" id="home">
         <div class="home-content">
             <h1>
                 Salut, c'est <span>Michael</span>
             </h1>
-            <p>Je m’appelle Michael Brown, j’ai 20 ans et je me consacre à devenir développeur full-stack. Bienvenu à mon site web :)</p>
-            <div class="social-icons">
+            <p>Je m’appelle Michael Brown, j’ai 20 ans et je me consacre à devenir développeur full-stack. Bienvenu à
+                mon site web :)</p>
+            <a href="">Contact</a>
+            <!-- <div class="social-icons">
                 <a href="https://github.com/Brown-in-Michael" target="_blank">
                     <i class="bx bxl-github"></i>
                 </a>
@@ -48,7 +51,7 @@
                 <a href="https://www.tiktok.com/en/" target="_blank">
                     <i class="bx bxl-tiktok"></i>
                 </a>
-            </div>
+            </div> -->
             <!-- <div class="btn-group">
                    <a href="#" class="btn">Recruter</a>
                    <a href="#contact">Contact</a> 
@@ -57,94 +60,120 @@
         <div class="home-img">
             <img src="Assets/Portrait.jpg" alt="An image of a young man blowing smoke in a room with purple LED">
         </div>
-     </section>
-     <!-- Section About -->
-      <section class="about" id="about">
+    </section>
+    <!-- Section About -->
+    <section class="about" id="about">
         <div class="about-img">
             <img src="Assets/Portrait_2.PNG" alt="">
         </div>
         <div class="about-content">
-            <h2>À propos <br>  <span>de Moi</span></h2>
-            <p>Je m’appelle Michael Brown, j’ai 20 ans et je me consacre à devenir développeur full-stack. Passionné par le web et motivé par l’envie d’apprendre, j’ai déjà suivi deux formations intensives, toutes deux réussies avec succès.
+            <h2>À propos <br> <span>de Moi</span></h2>
+            <p>Je m’appelle Michael Brown, j’ai 20 ans et je me consacre à devenir développeur full-stack. Passionné par
+                le web et motivé par l’envie d’apprendre, j’ai déjà suivi deux formations intensives, toutes deux
+                réussies avec succès.
 
-Trilingue en anglais, français et hongrois, je suis à l’aise dans des environnements variés et internationaux. Curieux, rigoureux et toujours prêt à relever de nouveaux défis, je souhaite mettre mes compétences au service de projets modernes et innovants.</p>
-                <!-- <a href="#" class="btn">En savoir plus</a> -->
+                Trilingue en anglais, français et hongrois, je suis à l’aise dans des environnements variés et
+                internationaux. Curieux, rigoureux et toujours prêt à relever de nouveaux défis, je souhaite mettre mes
+                compétences au service de projets modernes et innovants.</p>
+            <!-- <a href="#" class="btn">En savoir plus</a> -->
         </div>
-      </section>
-      <!-- Services Section -->
-       <section class="services" id="services">
-            <h2 class="heading">Compétences</h2>
-            <div class="stubborn">
-                <div class="services-container">
-                    <div class="service-box">
-                           <div class="service-info">
-                                <i class="bx bxl-figma"></i>
-                                <h3>UI / UX Design</h3>
-                                <p>Grâce à Figma, je crée des wireframes et des prototypes d’applications. Pour le choix des couleurs et l’accessibilité, j’utilise Coolors et j’intègre également l’IA afin de concevoir une interface utilisateur intuitive.</p>
-                           </div> 
-                     </div>
-                </div>
-
-                <div class="services-container">
-                    <div class="service-box">
-                            <div class="service-info">
-                                <i class="bx bx-code"></i>
-                                <h3>Front-End</h3>
-                                <p>Je possède de solides bases en HTML et CSS. Mes connaissances en JavaScript sont correctes, sans être parfaites, mais je m'efforce d'en apprendre davantage et de m'améliorer.</p>
-                           </div> 
-                    </div>
-                </div>
-
-                <div class="services-container">
-                    <div class="service-box">
-                           <div class="service-info">
-                                <i class="bx bx-brain"></i>
-                                <h3>Conception</h3>
-                                <p>Je travaille très bien en équipe. Je contribue à l'équipe grâce à mes qualités personnelles et aux compétences que j'ai acquises. J'aime résoudre les problèmes, ce qui est essentiel en développement web.</p>
-                           </div> 
+    </section>
+    <!-- Services Section -->
+    <section class="services" id="services">
+        <h2 class="heading">Compétences</h2>
+        <div class="stubborn">
+            <div class="services-container">
+                <div class="service-box">
+                    <div class="service-info">
+                        <i class="bx bxl-figma"></i>
+                        <h3>UI / UX Design</h3>
+                        <p>Grâce à Figma, je crée des wireframes et des prototypes d’applications. Pour le choix des
+                            couleurs et l’accessibilité, j’utilise Coolors et j’intègre également l’IA afin de concevoir
+                            une interface utilisateur intuitive.</p>
                     </div>
                 </div>
             </div>
-       </section>
-       <!-- Project Section -->
-        <section class="projects" id="projects">
-            <h2>Projets</h2>
-            <div class="project-box">
-                <div class="project-card">
-                    <img src="Assets/Project_1.png" alt="A web site of a festival">
-                    <h3>HTML & CSS</h3>
-                    <p>Voici donc un projet que j'ai dû réaliser seul après avoir appris les bases du HTML et du CSS en six jours. Ce projet ne contient pas de JavaScript. Ma classe et moi avons reçu un wireframe que je devais reproduire. Le projet porte sur un festival de rap à venir.</p>
-                    <a href="https://brown-in-michael.github.io/renduCSS/" target="_blank"><div class="btn">
-                        Voir le projet
-                    </div></a>
-                </div>
 
-                 <div class="project-card">
-                    <img src="Assets/Capture d’écran 2025-12-24 005455.png" alt="A web site of a festival">
-                    <h3>JavaScript (API)</h3>
-                    <p>Il s'agit de mon tout premier projet où j'ai utilisé mes connaissances en JavaScript pour récupérer l'API de Deezer et l'intégrer à mon site. Le but du projet est de permettre la recherche d'un artiste ou d'une chanson, et d'écouter le morceau recherché, comme sur Deezer.</p>
-                    <a href="https://brown-in-michael.github.io/deezerAPI/" target="_blank"><div class="btn">
-                        Voir le projet
-                    </div></a>
+            <div class="services-container">
+                <div class="service-box">
+                    <div class="service-info">
+                        <i class="bx bx-code"></i>
+                        <h3>Front-End</h3>
+                        <p>Je possède de solides bases en HTML et CSS. Mes connaissances en JavaScript sont correctes,
+                            sans être parfaites, mais je m'efforce d'en apprendre davantage et de m'améliorer.</p>
+                    </div>
                 </div>
+            </div>
 
-                 <div class="project-card">
-                    <img src="Assets/Capture d’écran 2025-12-24 011906.png" alt="A web site of a festival">
-                    <h3>Application Prototype</h3>
-                    <p>Ce projet avait pour objectif de me familiariser avec Figma. J’ai conçu un prototype d’application visant à aider les animaux sauvages blessés, en recueillant les retours d’autres étudiants pour l’améliorer. J’ai ensuite testé le prototype afin de vérifier son utilisation intuitive, sans tutoriel.</p>
-                    <a href="https://www.figma.com/proto/jp63HTUomFt2LLN9Gwubyz/WILD-AID?node-id=129-1072&starting-point-node-id=129%3A1072" target="_blank"><div class="btn">
-                        Voir le projet
-                    </div></a>
+            <div class="services-container">
+                <div class="service-box">
+                    <div class="service-info">
+                        <i class="bx bx-brain"></i>
+                        <h3>Conception</h3>
+                        <p>Je travaille très bien en équipe. Je contribue à l'équipe grâce à mes qualités personnelles
+                            et aux compétences que j'ai acquises. J'aime résoudre les problèmes, ce qui est essentiel en
+                            développement web.</p>
+                    </div>
                 </div>
-                <div class="project-card">
-                    <img src="Assets/Capture d’écran 2025-12-24 014032.png" alt="A web site of a festival">
-                    <h3>JavaScript (fichier JSON)</h3>
-                    <p>Bien qu'inachevé, ce projet consiste à utiliser JavaScript pour créer la plupart des éléments HTML et à utiliser un fichier JSON pour compléter des informations telles que le nom de l'entreprise, son slogan, ses services, etc. Pluiseur thèmes étaient proposés. J'ai choisi le thème « Escape Game ».</p>
+            </div>
+        </div>
+    </section>
+    <!-- Project Section -->
+    <section class="projects" id="projects">
+        <h2>Projets</h2>
+        <div class="project-box">
+            <div class="project-card">
+                <img src="Assets/Project_1.png" alt="A web site of a festival">
+                <h3>HTML & CSS</h3>
+                <p>Voici donc un projet que j'ai dû réaliser seul après avoir appris les bases du HTML et du CSS en six
+                    jours. Ce projet ne contient pas de JavaScript. Ma classe et moi avons reçu un wireframe que je
+                    devais reproduire. Le projet porte sur un festival de rap à venir.</p>
+                <a href="https://brown-in-michael.github.io/renduCSS/" target="_blank">
                     <div class="btn">
                         Voir le projet
                     </div>
+                </a>
+            </div>
+
+            <div class="project-card">
+                <img src="Assets/Capture d’écran 2025-12-24 005455.png" alt="A web site of a festival">
+                <h3>JavaScript (API)</h3>
+                <p>Il s'agit de mon tout premier projet où j'ai utilisé mes connaissances en JavaScript pour récupérer
+                    l'API de Deezer et l'intégrer à mon site. Le but du projet est de permettre la recherche d'un
+                    artiste ou d'une chanson, et d'écouter le morceau recherché, comme sur Deezer.</p>
+                <a href="https://brown-in-michael.github.io/deezerAPI/" target="_blank">
+                    <div class="btn">
+                        Voir le projet
+                    </div>
+                </a>
+            </div>
+
+            <div class="project-card">
+                <img src="Assets/Capture d’écran 2025-12-24 011906.png" alt="A web site of a festival">
+                <h3>Application Prototype</h3>
+                <p>Ce projet avait pour objectif de me familiariser avec Figma. J’ai conçu un prototype d’application
+                    visant à aider les animaux sauvages blessés, en recueillant les retours d’autres étudiants pour
+                    l’améliorer. J’ai ensuite testé le prototype afin de vérifier son utilisation intuitive, sans
+                    tutoriel.</p>
+                <a href="https://www.figma.com/proto/jp63HTUomFt2LLN9Gwubyz/WILD-AID?node-id=129-1072&starting-point-node-id=129%3A1072"
+                    target="_blank">
+                    <div class="btn">
+                        Voir le projet
+                    </div>
+                </a>
+            </div>
+            <div class="project-card">
+                <img src="Assets/Capture d’écran 2025-12-24 014032.png" alt="A web site of a festival">
+                <h3>JavaScript (fichier JSON)</h3>
+                <p>Bien qu'inachevé, ce projet consiste à utiliser JavaScript pour créer la plupart des éléments HTML et
+                    à utiliser un fichier JSON pour compléter des informations telles que le nom de l'entreprise, son
+                    slogan, ses services, etc. Pluiseur thèmes étaient proposés. J'ai choisi le thème « Escape Game ».
+                </p>
+                <div class="btn">
+                    Voir le projet
                 </div>
-                <!-- <div class="project-card">
+            </div>
+            <!-- <div class="project-card">
                     <img src="Assets/Project_5.png" alt="A web site of a festival">
                     <h3>Projet 5</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus asperiores, pariatur quidem dignissimos cupiditate saepe ut est necessitatibus sint facilis voluptate iste eius accusamus culpa sunt dolorum neque corporis! Eveniet.</p>
@@ -160,68 +189,74 @@ Trilingue en anglais, français et hongrois, je suis à l’aise dans des enviro
                         Voir le projet
                     </div>
                 </div> -->
-            </div>
-        </section>
-        <!-- Contact Form -->
-        <section class="Contact" id="Contact">
-            <h2>Contactez-<span>Moi</span></h2>
+        </div>
+    </section>
+    <!-- Contact Form -->
+    <section class="Contact" id="Contact">
+        <h2>Contactez-<span>Moi</span></h2>
+        <a href="mailto:votreadresse@mail.fr" class="btn"> contactez moi</a>
 
-            <form action="#">
-                <div class="input-group">
-                    <div class="input-box">
-                        <input type="text" placeholder="Nom Prénom">
-                        <input type="email" placeholder="Email">
-                    </div>
-                    <div class="input-box">
-                        <input type="number" placeholder="Téléphone">
-                        <input type="text" placeholder="Sujet">
-                    </div>
+        <form action="#">
+            <div class="input-group">
+                <div class="input-box">
+                    <input type="text" placeholder="Nom Prénom">
+                    <input type="email" placeholder="Email">
                 </div>
-                <div class="input-group-2">
-                    <textarea name="" id="" placeholder="Message" cols="30" rows="10"></textarea>
-                    <input type="submit" value="Envoyer" class="btn">
+                <div class="input-box">
+                    <input type="number" placeholder="Téléphone">
+                    <input type="text" placeholder="Sujet">
                 </div>
-            </form>
-        </section>
-        <!-- Footer -->
-         <footer>
-             <div class="social-icons">
-                <a href="https://github.com/Brown-in-Michael" target="_blank">
-                    <i class="bx bxl-github"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/michael-brown-891811386/" target="_blank">
-                    <i class="bx bxl-linkedin-square"></i>
-                </a>
-                <a href="https://www.instagram.com/_michael.edit/" target="_blank">
-                    <i class="bx bxl-instagram-alt"></i>
-                </a>
-                <a href="https://www.tiktok.com/en/" target="_blank">
-                    <i class="bx bxl-tiktok"></i>
-                </a>
             </div>
-            <ul class="list">
-                <li>
-                    <a href="">FAQ</a>
-                </li>
-                <li>
-                    <a href="#services">Skills</a>
-                </li>
-                <li>
-                    <a href="#about">À propos</a>
-                </li>
-                <li>
-                    <a href="#projects">Projets</a>
-                </li>
+            <div class="input-group-2">
+                <textarea name="" id="" placeholder="Message" cols="30" rows="10"></textarea>
+                <input type="submit" value="Envoyer" class="btn">
+            </div>
+        </form>
+    </section>
+    <section class="test">
+        <div></div>
+    </section>
+    <!-- Footer -->
+    <footer>
+        <div class="social-icons">
+            <a href="https://github.com/Brown-in-Michael" target="_blank">
+                <i class="bx bxl-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/michael-brown-891811386/" target="_blank">
+                <i class="bx bxl-linkedin-square"></i>
+            </a>
+            <a href="https://www.instagram.com/_michael.edit/" target="_blank">
+                <i class="bx bxl-instagram-alt"></i>
+            </a>
+            <a href="https://www.tiktok.com/en/" target="_blank">
+                <i class="bx bxl-tiktok"></i>
+            </a>
+        </div>
+        <ul class="list">
+            <li>
+                <a href="">FAQ</a>
+            </li>
+            <li>
+                <a href="#services">Skills</a>
+            </li>
+            <li>
+                <a href="#about">À propos</a>
+            </li>
+            <li>
+                <a href="#projects">Projets</a>
+            </li>
 
-                <li>
-                    <a href="#Contact">
-                        Contact
-                    </a>
-                </li>
-            </ul>
+            <li>
+                <a href="#Contact">
+                    Contact
+                </a>
+            </li>
+        </ul>
 
-            <p class="copyright">@ Michael Brown | All Rights Reserved</p>
-         </footer>
-         <script src="script.js"></script>
+        <p class="copyright">@ Michael Brown | All Rights Reserved</p>
+    </footer>
+    <script src="script.js"></script>
+
 </body>
+
 </html>
