--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>Je m’appelle Michael Brown, j’ai 20 ans et je me consacre à devenir développeur full-stack. Bienvenu
                     à
                     mon site web :)</p>
-                <a href="" class="btn">Contact</a>
+                <a href="#about" class="btn">En savoir plus</a>
                 <!-- <div class="social-icons">
                     <a href="https://github.com/Brown-in-Michael" target="_blank">
                         <i class="bx bxl-github"></i>
@@ -94,26 +94,23 @@
                     <div class="titlePara">
                         <h3>Conception</h3>
                         <p>
-                            Je travaille très bien en équipe. Je contribue à l'équipe grâce à mes qualités personnelles
-                            et
-                            aux compétences que j'ai acquises comme on vois ici ou je collaboré avec une college pour faire un prototype d'application sur Figma. J'aime résoudre les problèmes, ce qui est essentiel en
-                            développement web.
+                            Je travaille très bien en équipe. Je contribue à l’équipe grâce à mes qualités personnelles et aux compétences que j’ai acquises, comme on peut le voir ici où j’ai collaboré avec une collègue pour réaliser un prototype d’application sur Figma. J’aime résoudre des problèmes, ce qui est essentiel en développement web.
                         </p>
                     </div>
                 </div>
                 <div class="skills">
                     <h3>Design Thinking</h3>
                     <div>
-                        <h4>Persona</h4>
-                        <img src="Assets/Capture d'écran 2026-01-03 164241.png" alt="">
+                        <h4>Persona :</h4>
+                        <a href="https://pitch-nova-0b4.notion.site/Cause-Animale-RAMICH-2ae220828b138139b51dd3acba299fec?source=copy_link" target="_blank"><img src="Assets/Capture d'écran 2026-01-03 164241.png" alt=""></a>
                     </div>
                     <div>
-                        <h4>Wireframe</h4>
-                        <img src="Assets/Project_5.png" alt="">
+                        <h4>Wireframe :</h4>
+                        <a href="https://www.figma.com/proto/jp63HTUomFt2LLN9Gwubyz/WILD-AID?node-id=48-7358&t=DehV3iJiZv1osT9E-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=48%3A7358" target="_blank"><img src="Assets/Project_5.png" alt=""></a>
                     </div>
                     <div>
-                        <h4>Prototype</h4>
-                        <img src="Assets/Capture d’écran 2025-12-24 011906.png" alt="">
+                        <h4>Prototype :</h4>
+                        <a href="https://www.figma.com/proto/jp63HTUomFt2LLN9Gwubyz/WILD-AID?node-id=129-1072&t=YaY6n4ecBYUOsSv4-0&scaling=scale-down&content-scaling=fixed&page-id=48%3A7754&starting-point-node-id=129%3A1072" target="_blank"><img src="Assets/Capture d’écran 2025-12-24 011906.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -122,30 +119,28 @@
                     <div class="titlePara">
                         <h3>Developement Front-End</h3>
                         <p>
-                            Je possède de solides bases en HTML et CSS. Mes connaissances en JavaScript sont correctes,
-                            sans être parfaites, mais je m'efforce d'en apprendre davantage et de m'améliorer.
+                            Je possède de solides bases en HTML et CSS. Mes connaissances en JavaScript sont correctes, sans être parfaites. Vous pouvez voir les projets sur lesquels j’ai travaillé, comme par exemple l’utilisation d’API/JSON et la création d’éléments et de balises avec JavaScript, entre autres. Il y a encore beaucoup à apprendre, et je suis toujours motivé à développer et améliorer mes compétences.
                         </p>
                     </div>
                 </div>
                 <div class="skills">
                     <h3>Design Thinking</h3>
+
                     <div>
-                        <h4>HTML & CSS</h4>
-                        <img src="Assets/Project_1.png" alt="">
-                        <p> lorem ifdnjifij uunnnn te diiid neptum</p>
-                        <a href="" class="btn">Voir plus</a>
+                        <h4>HTML & CSS :</h4>
+                        <a href="https://brown-in-michael.github.io/renduCSS/" target="_blank"><img src="Assets/Project_1.png" alt=""></a>
                     </div>
                     <div>
-                        <h4>JavaScript</h4>
-                        <img src="Assets/Capture d’écran 2025-12-24 014032.png" alt="">
-                        <p> lorem ifdnjifij uunnnn te diiid neptum</p>
-                        <a href="" class="btn">Voir plus</a>
+                        <h4>JavaScript :</h4>
+                        <a href=" https://brown-in-michael.github.io/Projet_JavaScript/" target="_blank"><img src="Assets/Capture d’écran 2025-12-24 014032.png" alt=""></a>
                     </div>
                     <div>
-                        <h4>API</h4>
-                        <img src="Assets/Capture d’écran 2025-12-24 005455.png" alt="">
-                        <p> lorem ifdnjifij uunnnn te diiid neptum</p>
-                        <a href="" class="btn">Voir plus</a>
+                        <h4>API :</h4>
+                        <a href="https://brown-in-michael.github.io/deezerAPI/" target="_blank"><img src="Assets/Capture d’écran 2025-12-24 005455.png" alt=""></a>
+                    </div>
+                    <div>
+                        <h4>Projet Perso :</h4>
+                        <a href="https://brown-in-michael.github.io/Log_In/" target="_blank"><img src="Assets/login.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -158,23 +153,31 @@
             <div class="faq">
                 <details>
                     <summary>Qui suis-je et quel est mon parcours professionnel ?</summary>
-                    Quelque chose d'assez discret pour passer inaperçu.
+                    Je m’appelle Michael Brown. Je suis apprenant de LaToile chez <i>EMLYON Business School</i> et je me forme pour devenir développeur web. Je suis actuellement à la recherche d’un stage ou d’une alternance. Si vous êtes intéressé, n’hésitez pas à me contacter.
                 </details>
                 <details>
                     <summary>Est-ce que je travaille en freelance, en mission ou en contrat ?</summary>
-                    Quelque chose d'assez discret pour passer inaperçu.
+                    Pour le moment, je ne travaille pas encore en freelance, en mission ou en contrat, car je souhaite continuer à renforcer mes compétences. Cependant, si vous estimez que mon niveau est satisfaisant pour être recruté, je serais ravi d’accepter une opportunité.
                 </details>
                 <details>
                     <summary>Quel s'ont les outils et technologies que j’utilise ?</summary>
-                    Quelque chose d'assez discret pour passer inaperçu.
+                    J’utilise principalement Visual Studio Code pour le développement de sites web. Je travaille avec les technologies HTML, CSS et JavaScript pour créer des interfaces fonctionnelles et responsives.
+
+J’ai également des compétences en UI/UX design et j’utilise Figma pour concevoir des maquettes et des prototypes d’applications. En complément, je suis capable d’utiliser des CMS comme WordPress lorsque le projet le nécessite.
+
+Ces outils me permettent de concevoir des projets à la fois techniques et centrés sur l’expérience utilisateur.
                 </details>
                 <details>
                     <summary>Comment me contacter pour un projet ou une collaboration ?</summary>
-                    Quelque chose d'assez discret pour passer inaperçu.
+                    Vous pouvez me contacter pour un projet ou une collaboration en utilisant le formulaire de contact disponible sur le site. À défaut, vous pouvez également me joindre via mes réseaux sociaux accessibles dans le pied de page.
                 </details>
                 <details>
                     <summary>Pourquoi travailler avec moi plutôt qu’un autre professionnel ?</summary>
-                    Quelque chose d'assez discret pour passer inaperçu.
+                    Travailler avec moi, c’est choisir une personne motivée, sérieuse et engagée dans une démarche d’apprentissage continu. Je prends le temps de comprendre les besoins du projet afin de proposer des solutions adaptées, à la fois techniques et centrées sur l’expérience utilisateur.
+
+Je m’investis pleinement dans chaque projet, je m’adapte facilement au travail en équipe et je suis toujours ouvert aux retours pour m’améliorer.
+
+Enfin, ma motivation, ma curiosité et ma capacité à progresser rapidement font de moi un profil fiable et évolutif sur lequel on peut compter.
                 </details>
             </div>
             <!-- <div class="project-box">
