--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="skills">
-                    <h3>Design Thinking</h3>
+                    <h3>Réalisations</h3>
 
                     <div>
                         <h4>HTML & CSS :</h4>
